<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snagtag</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="title_section_tags">Tags</string>
    <string name="title_section_cart">Cart</string>
    <string name="title_section_closet">Closet</string>
    <string name="title_section_outfits">Outfit Creator</string>
    <string name="title_section_stores">Stores</string>
    <string name="title_section_account">Account Settings</string>
    <string name="title_section_home">Home</string>
    <string name="title_section_terms">Terms</string>
    <string name="title_snagtag">Snagtag</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="title_section_viewsnags">Snags</string>
    <string name="title_section_viewoutfits">Outfits</string>
    <string name="title_section_favorites">Favorites</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_tags">Tags</string>
    <string name="action_logout">Logout</string>
    <string name="tip_snag">Look for these tags at your favorite stores and start Snagging!</string>
    <string name="button_closet">Closet Button</string>
    <string name="button_cart">Cart Button</string>
    <string name="button_back_arrow">Back Button</string>
    <string name="title_measurements">Measurements:</string>
    <string name="facebook_app_id">680394008758696</string>
    <string name="next">Continue to Shipping and Billing..</string>
    <string name="start">Start Snagging > </string>

    <!-- Register strings -->
    <string name="label_register_1">About you</string>
    <string name="label_register_2">Shipping </string>
    <string name="label_register_3">Billing</string>
    <string name="register_button">Register </string>
    <string name="skip">Skip for now</string>
    <string name="or">-OR-</string>
    <string name="new_shipping">Setup your shipping address NOW for fast shopping!</string>
    <string name="new_billing">Setup Billing Address</string>
    <string name="card_name">Enter name on card</string>
    <string name="card_number">Enter number on card</string>
    <string name="what_stripe">What is Stripe?</string>

    <!-- Put dialog messages here -->
    <string name="dialog_no_nfc">Sorry, NFC is not available on this device</string>
    <string name="dialog_exit">Are you sure you want to exit Snagtag?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- font awesome icons go here -->
    <string name="icon_cart"></string>
    <string name="icon_creator"></string>
    <string name="icon_closet"></string>
    <string name="icon_terms"></string>
    <string name="icon_account"></string>
    <string name="icon_store"></string>
    <string name="icon_delete"></string>
    <string name="icon_right"></string>
    <string name="icon_left"></string>
    <string name="icon_down"></string>
    <string name="icon_remove"></string>
    <string name="icon_add"></string>
    <string name="icon_check"></string>
    <string name="icon_tag"></string>
    <string name="icon_edit">&#xf044;</string>
    <string name="icon_reorder"> Reorder</string>
    <string name="color">Color</string>

    <!-- cart labels -->
    <string name="label_cart_items">%n Items</string>

    <!-- Item labels for formatting -->
    <string name="item_size">Size: %1$s</string>
    <string name="item_cost">$ %1$.2f</string>
    <string name="item_color">Color: %1$s</string>
    <string name="item_history">Purchased from the %1$s on %2$s</string>
    <string name="cart_store_count">%1$d Items</string>
    <string name="cart_store_subtotal">Subtotal: %1$s</string>

    <!-- Checkout elements -->
    <string name="checkout_subtotal">Subtotal: $ %1$.2f</string>
    <string name="checout_total">Total: $ %1$.2f</string>
    <string name="checkout_shipping">%1$s business days</string>
    <string name="checkout_item_count">%1$d Items</string>

    <!--
     Account elements
     NAME
     ADDRESS
     CITY, STATE ZIP
    -->
    <string name="user_address">%1$s\n%2$s\n%3$s, %4$s %5$s</string>
    <string name="user_card_number">Card #: XXXX XXXX XXXX %1$s</string>
    <string name="user_exp_date">Exp Date: %1$s</string>

    <!-- Multi-use elements -->
    <string name="dollar">$ %1$.2f</string>
    <string name="order_number">Order #%1$s</string>

    <!-- Labels -->
    <string name="label_saved_addresses">Saved Addresses</string>
    <string name="label_saved_cards">Saved Cards</string>
    <string name="label_orders">Orders</string>
    <string name="label_promo_code">Promo Code:</string>
    <string name="label_apply">Apply</string>
    <string name="label_place_order">Place Order</string>
    <string name="label_step_1">1. Edit Order</string>
    <string name="label_step_2">2. Shipping &amp; Billing</string>
    <string name="label_step_3">3. Review</string>
    <string name="label_get_started">3. Get started</string>
    <string name="label_tops">Tops</string>
    <string name="label_bottoms">Bottoms</string>
    <string name="label_shoes">Shoes</string>
    <string name="label_filters">Filters</string>
    <string name="label_add_outfit">Add New Outfit</string>
    <string name="label_set_default">Set as Default</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_find_a_store">Find a store</string>
    <string name="add_to_cart">Add to Cart</string>

    <!-- Tutorial texts -->
    <string name="label_tutorial_title">Here\'s how it works:</string>
    <string name="label_tutorial_step_1">1. Swipe Snagtags with your phone, pick a size and color add them to your card</string>
    <string name="label_tutorial_step_2">2. Use the Outfit Editor to match your Snags to mItems you already own</string>
    <string name="label_tutorial_step_3">3. Purchase your Snags easily and securely</string>
    <string name="label_get_snagging">Got it, get Snagging! >></string>
    <string name="latest_snags">Latest Snags</string>

    <!-- Image content descriptons -->
    <string name="content_description_snag">Snag Label</string>
    <string name="content_description_closet">Closet Image</string>
    <string name="content_description_cart">Cart Image</string>
    <string name="stripe_card_sample">pk_test_eXaSf12Sd74O11x8KpbvAPgb</string>

    <string-array name="states">
        <item></item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="exp_month">
        <item></item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="exp_year">
        <item></item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
    </string-array>
    <string-array name="states_abbreviations">
        <item></item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string-array name="clothes_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="shoe_sizes">
        <item>8</item>
        <item>8.5</item>
        <item>9</item>
        <item>9.5</item>
        <item>10</item>
        <item>10.5</item>
        <item>11</item>
        <item>11.5</item>
    </string-array>

    <string name="title_activity_launch">LaunchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>