<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    <TextView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:text="@string/label_tutorial_title"
        android:gravity="center"
        android:layout_margin="36dp"
        android:textSize="24sp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="24"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:textSize="18sp"
            android:text="@string/label_tutorial_step_1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="35"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_snag"
            android:src="@drawable/ic_launcher"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="24"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:textSize="18sp"
            android:text="@string/label_tutorial_step_2"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="35"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_closet"
            android:src="@drawable/outfit"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="24"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:textSize="18sp"
            android:text="@string/label_tutorial_step_3"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="35"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_cart"
            android:src="@drawable/cart"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_continue"
        android:layout_gravity="center"
        android:textColor="@color/grey_dark"
        android:textSize="28sp"
        android:text="@string/label_get_snagging"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:background="@color/grey_light"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />

</LinearLayout>