<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/grey_light"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/label_saved_addresses"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/pager_addresses"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="25"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/grey_light"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/label_saved_cards"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/pager_cards"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="25"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/grey_light"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/label_orders"
        />
    <ListView
        android:id="@+id/list_order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"/>
</LinearLayout>