<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">
    <com.parse.ParseImageView
        android:id="@+id/item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        tools:src="@drawable/ic_launcher"/>
    <com.snagtag.ui.IconCustomTextView
        android:id="@+id/button_delete"
        android:layout_width="@dimen/delete_circle_diameter"
        android:layout_height="@dimen/delete_circle_diameter"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_size_close"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/icon_delete"
        android:background="@drawable/circle_grey"/>
    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/item_image"
        android:layout_toLeftOf="@id/button_delete"
        tools:text="Brand Striped Boatneck Top"/>
    <TextView
        android:id="@+id/item_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_description"
        android:layout_toRightOf="@id/item_image"
        tools:text="Color: Red"/>
    <TextView
        android:id="@+id/item_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_color"
        android:layout_toRightOf="@id/item_image"
        tools:text="Size: M"/>
    <TextView
        android:id="@+id/item_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_size"
        android:layout_marginBottom="12dp"
        android:layout_toRightOf="@id/item_image"
        android:textColor="@color/blue"
        tools:text="$55.00"/>
    <com.snagtag.ui.IconCustomTextView
        android:id="@+id/button_subtract_one"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@id/item_cost"
        android:layout_toRightOf="@id/item_image"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/icon_remove"
        android:gravity="center"
        android:background="@drawable/add_subtract_button_shape"/>
    <TextView
        android:id="@+id/item_count"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/item_cost"
        android:layout_toRightOf="@id/button_subtract_one"
        android:gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="0"/>
    <com.snagtag.ui.IconCustomTextView
        android:id="@+id/button_add_one"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@id/item_cost"
        android:layout_toRightOf="@id/item_count"
        android:gravity="center"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/icon_add"
        android:background="@drawable/add_subtract_button_shape"/>


</RelativeLayout>