<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/bottom_bar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="end"
        android:background="#d7d7d7">
    </LinearLayout>
    <ImageView
        android:id="@+id/button_closet"
        android:contentDescription="@string/button_closet"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/circle_grey"
        android:layout_marginRight="24dp"/>
    <ImageView
        android:id="@+id/button_cart"
        android:contentDescription="@string/button_cart"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/circle_blue_button"
        android:layout_marginRight="106dp"/>
    <com.snagtag.ui.IconCustomTextView
        android:id="@+id/arrow_back"
        android:text="@string/icon_left"
        android:textSize="28sp"
        android:textColor="@color/grey_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingEnd="24dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar">
        <LinearLayout
            android:orientation="vertical"
            android:background="#f0f0f0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@color/white"
                android:padding="24dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.snagtag.scroll.CenteringHorizontalScrollView
                    android:id="@+id/tops_scroll_view"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/creator_selector_height"
                    android:scrollbars="none"
                    android:background="@color/white">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/tops_view"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/creator_selector_height"
                        android:background="@color/white">

                    </LinearLayout>
                </com.snagtag.scroll.CenteringHorizontalScrollView>
            </LinearLayout>
            <LinearLayout
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:padding="24dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/label_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_dark"
                    tools:text="Brand"/>
                <TextView
                    android:id="@+id/label_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_dark"
                    tools:text="Striped Boatneck Top"/>
                <TextView
                    android:id="@+id/label_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_dark"
                    tools:text="$55.00"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--Embed Color Options here...-->
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--Embed Size Options here...-->
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:padding="24dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/title_measurements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_dark"
                    />
                <TextView
                    android:id="@+id/label_measurements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_dark"
                    tools:text="Some measurement information here"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>